--- a/BicycleShop/Views/Home/Index.cshtml
+++ b/BicycleShop/Views/Home/Index.cshtml
@@ -1,8 +1,52 @@
-﻿@{
+﻿@model IEnumerable<BicycleShop.Models.Bicycle>
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<table>
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>  |  </th> 
+            <th>Brand</th>
+            <th>  |  </th>
+            <th>Price</th>
+            <th>  |  </th>
+            <th>Class</th>
+            <th>  |  </th>
+            <th>Wheels</th>
+            <th>  |  </th>
+            <th>Frame</th>
+            <th>  |  </th>
+            <th>Color</th>
+            <th>  |  </th>
+            <th>Year of issue</th>
+            <th>  |  </th>
+            <th>Saddle</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var bicycle in Model)
+        {
+            <tr>
+                <td>@bicycle.Title</td>
+                <th>|</th>
+                <td>@bicycle.Brand</td>
+                <th>|</th>
+                <td>@bicycle.Price</td>
+                <th>|</th>
+                <td>@bicycle.Class</td>
+                <th>|</th>
+                <td>@bicycle.Wheels</td>
+                <th>|</th>
+                <td>@bicycle.Frame</td>
+                <th>|</th>
+                <td>@bicycle.Color</td>
+                <th>|</th>
+                <td>@bicycle.YearOfIssue</td>
+                <th>|</th>
+                <td>@bicycle.Saddle</td>
+            </tr>
+        }
+    </tbody>
+</table>
