--- a/BicycleShop/Views/Home/Index.cshtml
+++ b/BicycleShop/Views/Home/Index.cshtml
@@ -36,5 +36,11 @@
         }
     </tbody>
 </table>
+<form method="get" class="btn-group d-flex align-content-center">
+    @for (int i = 1; i <= ViewBag.Count / 10 + 1; i++)
+    {
+        <input type="submit" class="btn btn-outline-dark" name="page" value="@i" />
+    }
+</form>
 <input type="hidden" id="IsOrderSuccess" value="@ViewBag.IsOrderSuccess" />
 <script type="text/javascript" src="~/js/index.js"></script>
