--- a/BicycleShop/Views/Admin/Edit.cshtml
+++ b/BicycleShop/Views/Admin/Edit.cshtml
@@ -4,43 +4,52 @@
 
 <form method="post">
     <input type="hidden" name="Id" value="@Model.Id" />
-    <div class="input-group mb-3">
+    <div class="input-group mt-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Title:</span>
         <input type="text" class="form-control" name="Title" value="@Model.Title" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
     </div>
-    <div class="input-group mb-3">
+    @Html.ValidationMessage("Title")
+    <div class="input-group mt-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Brand:</span>
         <input type="text" class="form-control" name="Brand" value="@Model.Brand" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
     </div>
-    <div class="input-group mb-3">
+    @Html.ValidationMessage("Brand")
+    <div class="input-group mt-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Price:</span>
         <input type="number" class="form-control" name="Price" value="@Model.Price" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
     </div>
-    <div class="input-group mb-3">
+    @Html.ValidationMessage("Price")
+    <div class="input-group mt-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Class:</span>
         <input type="text" class="form-control" name="Class" value="@Model.Class" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
     </div>
-    <div class="input-group mb-3">
+    @Html.ValidationMessage("Class")
+    <div class="input-group mt-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Wheels:</span>
         <input type="number" class="form-control" name="Wheels" value="@Model.Wheels" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
     </div>
-    <div class="input-group mb-3">
+    @Html.ValidationMessage("Wheels")
+    <div class="input-group mt-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Frame:</span>
         <input type="number" class="form-control" name="Frame" value="@Model.Frame" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
     </div>
-    <div class="input-group mb-3">
+    @Html.ValidationMessage("Frame")
+    <div class="input-group mt-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Color:</span>
         <input type="text" class="form-control" name="Color" value="@Model.Color" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
     </div>
-    <div class="input-group mb-3">
+    @Html.ValidationMessage("Color")
+    <div class="input-group mt-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Year of issue:</span>
         <input type="number" class="form-control" name="YearOfIssue" value="@Model.YearOfIssue" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
     </div>
-    <div class="input-group mb-3">
+    @Html.ValidationMessage("YearOfIssue")
+    <div class="input-group mt-3">
         <span class="input-group-text" id="inputGroup-sizing-default">Saddle:</span>
         <input type="text" class="form-control" name="Saddle" value="@Model.Saddle" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
     </div>
-    <div class="d-flex justify-content-between">
+    @Html.ValidationMessage("Saddle")
+    <div class="d-flex justify-content-between  mt-3">
         <a class="btn btn-outline-danger px-5" href="~/Admin/Index">Back</a>
         <button class="btn btn-outline-success px-5" type="submit">Save changes</button>
     </div>
