--- a/BicycleShop/wwwroot/css/site.css
+++ b/BicycleShop/wwwroot/css/site.css
@@ -69,3 +69,9 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+.field-validation-error {
+    font-style: italic;
+    background-color: palevioletred;
+    border-radius: 3px;
+    padding: 5px;
+}
