--- a/BicycleShop/Views/Home/Index.cshtml
+++ b/BicycleShop/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <th class="table-dark" scope="col">Color</th>
             <th class="table-dark" scope="col">Year of issue</th>
             <th class="table-dark" scope="col">Saddle</th>
-            <th class="table-dark" scope="col">Buy</th>
+            <th class="table-dark" scope="col">Action</th>
         </tr>
     </thead>
     <tbody>
@@ -31,7 +31,10 @@
                 <td>@bicycle.Color</td>
                 <td>@bicycle.YearOfIssue</td>
                 <td>@bicycle.Saddle</td>
-                <td><a class="btn btn-outline-dark px-4" href="~/Home/Buy/@bicycle.Id">Buy</a></td>
+                <td class="d-flex">
+                    <a class="btn btn-outline-dark px-4 mx-1" href="~/Home/Buy/@bicycle.Id">Buy</a>
+                    <a class="btn btn-outline-dark px-4 mx-1" href="~/Cart/AddToCart/@bicycle.Id">Add cart</a>
+                </td>
             </tr>
         }
     </tbody>
